--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,102 +1,121 @@
 body {
- margin: 0;
- padding: 0;
- background-color: #d5d5d5;
+    margin: 0;
+    padding: 0;
+    background-color: #d5d5d5;
 }
 
 li {
- list-style: none;
+    list-style: none;
 }
 
 a {
- text-decoration: none;
+    text-decoration: none;
 }
 
 .search-menu {
- display: flex;
- justify-content: center;
- padding: 20px;
- background-color: white;
- box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .search-input {
- width: 300px;
- padding: 10px;
- border: 1px solid #333333;
- border-radius: 5px;
- margin-right: 10px;
+    width: 300px;
+    padding: 10px;
+    border: 1px solid #333333;
+    border-radius: 5px;
+    margin-right: 10px;
 }
 
 .search-btn {
- padding: 10px 20px;
- border: none;
- background-color: #1f8bff;
- color: white;
- border-radius: 5px;
- cursor: pointer;
+    padding: 10px 20px;
+    border: none;
+    background-color: #1f8bff;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-load {
+    padding: 10px 20px;
+    border: none;
+    width: 150px;
+    display: block;
+    margin: 0 auto;
+    background-color: #1f8bff;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 40px;
+    display: none;
+}
+
+.btn-load:disabled {
+    background-color: #6281a3;
 }
 
 .gallery {
- display: grid;
- grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
- gap: 20px;
- padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    padding: 20px;
 }
 
 .gallery-item {
- background-color:  white;
- padding: 10px;
- border-radius: 5px;
- box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
- text-align: center;
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 .gallery-image {
- width: 100%;
- height: 200px;
- border-radius: 5px;
+    width: 100%;
+    height: 200px;
+    border-radius: 5px;
 }
 
 .info {
- display: flex;
- justify-content: space-around;
- font-size: 14px;
- color: #4a4a4a;
+    display: flex;
+    justify-content: space-around;
+    font-size: 14px;
+    color: #4a4a4a;
 }
 
 .loader {
- color: #000000;
- display: inline-block;
- position: absolute;
- display: none;
- left: 50%;
- transform: translateX(-50%);
- font-size: 32px;
- font-family: Arial, Helvetica, sans-serif;
- box-sizing: border-box;
+    color: #000000;
+    display: inline-block;
+    position: absolute;
+    display: none;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 32px;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    margin-bottom: 40px;
 }
 
 .loader::after {
- content: "";
- width: 5px;
- height: 5px;
- background: currentColor;
- position: absolute;
- bottom: 10px;
- right: -5px;
- box-sizing: border-box;
- animation: animloader 1s linear infinite;
+    content: "";
+    width: 5px;
+    height: 5px;
+    background: currentColor;
+    position: absolute;
+    bottom: 10px;
+    right: -5px;
+    box-sizing: border-box;
+    animation: animloader 1s linear infinite;
 }
 
 @keyframes animloader {
- 0% {
-     box-shadow: 10px 0 rgba(255, 255, 255, 0), 20px 0 rgba(191, 0, 0, 0);
- }
- 50% {
-     box-shadow: 10px 0 rgb(0, 0, 0), 20px 0 rgb(0, 0, 0);
- }
- 100% {
-     box-shadow: 10px 0 rgb(0, 0, 0), 20px 0 rgb(0, 0, 0);
- }
+    0% {
+        box-shadow: 10px 0 rgba(255, 255, 255, 0), 20px 0 rgba(191, 0, 0, 0);
+    }
+    50% {
+        box-shadow: 10px 0 rgb(0, 0, 0), 20px 0 rgb(0, 0, 0);
+    }
+    100% {
+        box-shadow: 10px 0 rgb(0, 0, 0), 20px 0 rgb(0, 0, 0);
+    }
 }
